# comet

./: .cursorignore  .env.sample  .gitignore  .prompt.yml.sample  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
docs/: PREREQUISITES.md
src/comet/: __main__.py  _cli.py
src/comet/adapters/: chat.py  response.py
src/comet/ai/models/: _base.py  _types.py  claude_model.py  gpt_model.py  storage.py
src/comet/ai/services/: completion.py
src/comet/config/: env.py  timezone.py  yml.py
src/comet/db/: _base.py
src/comet/db/dao/: access_privilege_dao.py  usage_limit_dao.py
src/comet/discord/: client.py  event.py
src/comet/discord/commands/: __init__.py  access_commands.py  chat_command.py  fixpy_command.py  limit_commands.py  talk_command.py
src/comet/utils/: logger.py  scheduler.py
src/comet/utils/decorators/: __init__.py  access.py  error.py
